--- a/html_files/About us.html
+++ b/html_files/About us.html
@@ -24,7 +24,7 @@
     <a class="navbar-brand" href="#"><strong>Footprints</strong></a>
     <ul class="navbar-nav ml-auto" >
       <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
+        <a class="nav-link" href="../index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">About Us</a>
